--- a/de/whitepaper.html
+++ b/de/whitepaper.html
@@ -1170,7 +1170,7 @@
         <p><strong>Q: Ist euer Code von PoWH geklaut?</strong><br>
             A: Nein, der EthPyramid-Code wurde von Grund auf neu geschrieben und beinhaltet keine der Hintertüren der vorherigen Pyramidenschemen.
         </p>
-        <p><strong>Q: Ist EthPyramid sicher?</h4>
+        <p><strong>Q: Ist EthPyramid sicher?</strong><br>
             Ja, unser Entwicklerteam hat viele Stunden in die Entwicklung und Testung des Contracts gesteckt, um die Sicherheit deiner Tokens zu gewährleisten. Interne Funktionen des Contracts können nicht durch den Endnutzer aufgerufen werden.
         </p>
         <p><strong>Q: Alles klar, was brauch ich um mitzumachen?</strong><br>
@@ -1179,21 +1179,21 @@
         <p><strong>Q: Ist dieser Token vorgeschürft?</strong><br>
             A: Nein, und es gibt auch keine Hintertüren im Code, die uns irgendwelche Vorteile beim Handel mit dem Contract bieten.
         </p>
-        <p><strong>Q: Also was genau passiert mit den Tokens, die ich kaufe?</strong>
+        <p><strong>Q: Also was genau passiert mit den Tokens, die ich kaufe?</strong><br>
             A: Jedes mal wenn jemand einen Token kauft oder verkauft, verändert sich der Preis. Er steigt 0,25% bei Kauf und sinkt 0,25% bei Verkauf.
             Wenn du deine Tokens lässt, wo sie sind, erhältst du für jeden Kauf UND Verkauf, den Andere tätigen, Einen Anteil von 10% des Preises als Dividenden. Je größer der Anteil deiner Tokens am Gesamtvolumen, desto mehr Dividenden erhältst du.
             Du kannst deine Tokens jederzeit in Ethereum konvertieren und in dein Dividendenkonto einzalhen. Dividenden werden nicht durch den EPY-Preis beeinflusst, bringen dir aber auch keine Dividenden mehr. Sie können auch benutzt werden, um neue Tokens zu kaufen.
         </p>
-        <p><strong>Q: Warum sollte ich mitmachen?</strong>
+        <p><strong>Q: Warum sollte ich mitmachen?</strong><br>
             A: EthPyramid ermutigt das Halten von Tokens mehr als andere ähnliche Platformen. Jeder Handel mit dem Smart-Contract teilt 10% des Preises auf Token-Halter auf, und fördert STARKE HÄNDE. Die Möglichkeit, Dividenden direkt in Tokens umzuwandeln ohne sie erst ins MetaMask-Wallet schicken zu müssen spart Zeit und unnötige Transaktionskosten. Wir erzielen Langlebigkeit, ein System, in dem "Pumps", "Dumps" und Mondmissionen denen zugute kommen, die einfach nur zurücklehen und die Dividenden steigen sehen wollen.
         </p>
-        <p><strong>Q: Klingt gut, erzähl mir mehr!</strong>
+        <p><strong>Q: Klingt gut, erzähl mir mehr!</strong><br>
             A: Unser System mildert das Risiko durch Dumping, indem Verkäufer benachteiligt werden. Selbst während der Kusr sinkt, sammelst du weiter Dividenden, die Dividenden steigen dabei sogar zusammen mit deinem Token-Anteil. Jene, die versuchen, den Markt zu überlisten, hoch zu verkaufen und niedrig wieder zu kaufen, riskieren dabei viel mehr riskieren, während andere die Divvies absahnen. Wenn du dich entscheidest, dich zurückzulehnen und auf Nummer sicher zu gehen, profitierst du vom Wahnsinn der Wale und schwachen Hände.
         </p>
-        <p><strong>Q: Alles klar, nehmt ihr Kreditkarten?</strong>
+        <p><strong>Q: Alles klar, nehmt ihr Kreditkarten?</strong><br>
             A: AUF KEINEN FALL solltest du mehr in EthPyramid stecken, als du die leisten kannst zu verlieren. BITTE halte das nicht für irgenetwas anderes als was es sein soll: ein irrer konzeptioneller Beweis als Gefangenendilemma. Es ist ein Witz und sollte als solcher behandelt werden. Steck hier kein Geld rein, dass du nicht bereit bist, sofort als verloren anzusehen.
         </p>
-        <p><strong>Q: Was genau garantiert ihr mir?</strong>
+        <p><strong>Q: Was genau garantiert ihr mir?</strong><br>
             A: Gar nichts. Ernsthaft. Pyramiden sind per Definition ein Nullsummenspiel. Das Risiko liegt ganz bei dir. Viel Glück, hab Spaß! Aber denk dran, es ist Internet-Monopoly-Geld. Tuh nichts, wodurch du Schlaf (oder deine Familie) verlierst.
         </p>
 
