--- a/cn/coins.html
+++ b/cn/coins.html
@@ -71,7 +71,7 @@
                             </li>
                             </li>
                             <li>
-                                <a href="../whitepaper.html" target="_blank">白皮书</a>
+                                <a href="../cn/whitepaper.html" target="_blank">白皮书</a>
                             </li>
                         </ul>
                     </div>
