Fixed whitepaper CN link

--- a/cn/index.html
+++ b/cn/index.html
@@ -68,12 +68,12 @@
                         <ul>
                             <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">智能合约</a>
                             </li>
-                            <li><a href="coins.html">我的金币</a>
+                            <li><a href="../cn/coins.html">我的金币</a>
                             </li>
 							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">新！</span>博客</a>
                             </li>
                             <li>
-                              <a href="../whitepaper.html" target="_blank">白皮书</a>
+                              <a href="../cn/whitepaper.html" target="_blank">白皮书</a>
                             </li>
                         </ul>
                     </div>
