--- a/fr/index.html
+++ b/fr/index.html
@@ -46,7 +46,7 @@
 		<a href="../cn/index.html"><img src="../images/CN.jpg"></a>
         <a href="../de/index.html"><img src="../images/DE.jpg"></a>
         <a href="../es/index.html"><img src="../images/SP.jpg"></a>
-		<a href="../kr/index.html"><img src="../images/KR.jpg"></a>
+		<a href="https://img.memecdn.com/soon-my-friend-soon_o_175785.jpg"><img src="../images/KR.jpg"></a>
 		</div>
 		<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
@@ -138,7 +138,7 @@
                                             </div>
                                             <h4>Pour toujours</h4>
                                             <div class="line"></div>
-                                            <p>Sérieusement, pas de pré-mine, pas d'auto-destruction, pas d'arnaque de sortie. Ce contrat fluctuera en prix et versera des dividendes jusqu'à la mort du réseau ethereum. À tout moment, vous pouvez revendre vos jetons au Smart Contract pour 90% du prix actuel, ou retirer/réinvestir les dividendes que vous avez accumulés!</p>
+                                            <p>Sérieusement, pas de pré-mine, pas d'auto-destruction, pas d'arnaque de sortie. Ce contrat fluctuera en prix et versera des dividendes jusqu'à la mort du réseau ethereum. À tout moment, vous pouvez revendre vos jetons au Smart Contract pour 80% du prix actuel, ou retirer/réinvestir les dividendes que vous avez accumulés!</p>
                                 </div>
                             </li>
                         </ul>
@@ -168,7 +168,7 @@
                             </div>
                             <h4>Pour toujours</h4>
                             <div class="line"></div>
-                            <p>Sérieusement, pas de pré-mine, pas d'auto-destruction, pas d'arnaque de sortie. Ce contrat fluctuera en prix et versera des dividendes jusqu'à la mort du réseau ethereum. À tout moment, vous pouvez revendre vos jetons au Smart Contract pour 90% du prix actuel, ou retirer/réinvestir les dividendes que vous avez accumulés!</p>
+                            <p>Sérieusement, pas de pré-mine, pas d'auto-destruction, pas d'arnaque de sortie. Ce contrat fluctuera en prix et versera des dividendes jusqu'à la mort du réseau ethereum. À tout moment, vous pouvez revendre vos jetons au Smart Contract pour 80% du prix actuel, ou retirer/réinvestir les dividendes que vous avez accumulés!</p>
                         </div>
                     </div>
 
