--- a/cn/index.html
+++ b/cn/index.html
@@ -46,7 +46,7 @@
         <a href="../de/index.html"><img src="../images/DE.jpg"></a>
         <a href="../es/index.html"><img src="../images/SP.jpg"></a>
 		<a href="../fr/index.html"><img src="../images/FR.jpg"></a>
-		<a href="../kr/index.html"><img src="../images/KR.jpg"></a>
+		<a href="https://img.memecdn.com/soon-my-friend-soon_o_175785.jpg"><img src="../images/KR.jpg"></a>
 		</div>
 		<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
