--- a/coins.html
+++ b/coins.html
@@ -41,9 +41,11 @@
 		<div class="flagBits">
         <a href="coins.html"><img src="images/UK.jpg"></a>
 		<a href="au/coins.html"><img src="images/AU.jpg"></a>
+		<a href="cn/coins.html"><img src="images/CN.jpg"></a>
 		<a href="fr/coins.html"><img src="images/FR.jpg"></a>
         <a href="de/coins.html"><img src="images/DE.jpg"></a>
         <a href="es/coins.html"><img src="images/SP.jpg"></a>
+		<a href="https://img.memecdn.com/soon-my-friend-soon_o_175785.jpg"><img src="images/KR.jpg"></a>
 		</div>
 				<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
