Added CN flag to CN coin page

--- a/cn/coins.html
+++ b/cn/coins.html
@@ -39,6 +39,7 @@
     <div class="introduction-banner">
         <div class="header sticky-header ">
 		<div class="flagBits">
+        <a href="coins.html"><img src="../images/CN.jpg"></a>
         <a href="../au/coins.html"><img src="../images/AU.jpg"></a>
         <a href="../coins.html"><img src="../images/UK.jpg"></a>
         <a href="../de/coins.html"><img src="../images/DE.jpg"></a>
