--- a/cn/index.html
+++ b/cn/index.html
@@ -37,7 +37,7 @@
 <!-- End Google Tag Manager (noscript) -->
 <div class="main-outer text-center">
     <!-- Homepage Banner -->
-    <div class="introduction-banner">
+    <div class="introduction-banner cn">
         <div class="header sticky-header">
 		<div class="flagBits">
 		<a href="#"><img src="../images/CN.jpg"></a>
