--- a/cn/coins.html
+++ b/cn/coins.html
@@ -36,7 +36,7 @@
         
   <!-- End Google Tag Manager (noscript) -->
 <div class="main-outer text-center faq-main">
-    <div class="introduction-banner">
+    <div class="introduction-banner cn">
         <div class="header sticky-header ">
 		<div class="flagBits">
         <a href="coins.html"><img src="../images/CN.jpg"></a>
