Dropped 'new' from blog

--- a/au/index.html
+++ b/au/index.html
@@ -70,7 +70,7 @@
                             </li>
                             <li><a href="coins.html">My Moolah</a>
                             </li>
-							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEW!   </span>Blog</a>
+							<li><a href="https://blog.ethpyramid.com">Blog</a>
                             </li>
                             <li>
                               <a href="../whitepaper.html" target="_blank">Whitepaper</a>
