--- a/cn/coins.html
+++ b/cn/coins.html
@@ -68,7 +68,7 @@
                             <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">智能合约</a>
                             </li>
                             <li><a href="coins.html">我的金币</a>
-							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">新！</span>博客</a>
+							<li><a href="https://blog.ethpyramid.com">博客</a>
                             </li>
                             </li>
                             <li>
