--- a/de/coins.html
+++ b/de/coins.html
@@ -65,7 +65,7 @@
                             <ul>
                                 <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart-Contract</a></li>
                                 <li><a href="coins.html">Meine Tokens</a></li>
-                                <li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEU!   </span>Blog</a></li>
+                                <li><a href="https://blog.ethpyramid.com">Blog</a></li>
                                 <li><a href="whitepaper.html" target="_blank">Whitepaper</a></li>
                             </ul>
                         </div>
@@ -75,7 +75,7 @@
             <div class="faq-main-content">
 
                 <div class="faq-header text-center">
-                    <h2 style="color:#d69361">EthPyramid-Tokens kaufen</h2>
+                    <h2 style="color:#d69361">EthPyramid-Tokens Kaufen</h2>
                     <div id="quoteDisplay"></div>
                     <script>newQuote()</script>
                 </div>
@@ -95,7 +95,7 @@
                                             <div class="buy-eos">
                                                 <img src="../images/spinning.gif" alt="EthPyramid" style="margin-bottom: 20px;">
                                                 <input type="number" id="purchase-amount" class="form-control" placeholder="Menge in ETH (z.B. 0.5)">
-                                                <button id="buy-eos-tokens" class='cta' >Tokens KAUFEN</button>
+                                                <button id="buy-eos-tokens" class='cta' >Tokens Kaufen</button>
                                             </div>
                                             <div class="currency-selector">
                                                 Währung:
