--- a/de/index.html
+++ b/de/index.html
@@ -66,7 +66,7 @@
                             <ul>
                                 <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart-Contract</a></li>
                                 <li><a href="coins.html">Meine Tokens</a></li>
-                                <li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEU!   </span>Blog</a></li>
+                                <li><a href="https://blog.ethpyramid.com">Blog</a></li>
                                 <li><a href="whitepaper.html" target="_blank">Whitepaper</a></li>
                             </ul>
                         </div>
