--- a/fr/coins.html
+++ b/fr/coins.html
@@ -68,11 +68,11 @@
                             <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart Contract</a>
                             </li>
                             <li><a href="coins.html">Mes Jetons</a>
-							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEW!   </span>Blog</a>
+							<li><a href="https://blog.ethpyramid.com">Blog</a>
                             </li>
                             </li>
                             <li>
-                                <a href="whitepaper.html" target="_blank">Livre blanc</a>
+                                <a href="whitepaper.html" target="_blank">Livre Blanc</a>
                             </li>
                         </ul>
                     </div>
@@ -82,7 +82,7 @@
         <div class="faq-main-content">
 
 		<div class="faq-header text-center">
-                            <h2 style="color:#d69361">Acheter des jetons EthPyramid</h2>
+                            <h2 style="color:#d69361">Acheter Des Jetons EthPyramid</h2>
 							<div id="quoteDisplay"></div>
 							<script>newQuote()</script>
                         </div>
