--- a/cn/index.html
+++ b/cn/index.html
@@ -70,7 +70,7 @@
                             </li>
                             <li><a href="../cn/coins.html">我的金币</a>
                             </li>
-							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">新！</span>博客</a>
+							<li><a href="https://blog.ethpyramid.com">博客</a>
                             </li>
                             <li>
                               <a href="../cn/whitepaper.html" target="_blank">白皮书</a>
