--- a/es/coins.html
+++ b/es/coins.html
@@ -68,7 +68,7 @@
                             <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Contrato Inteligente</a>
                             </li>
                             <li><a href="coins.html">Mis Tokens</a>
-							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NUEVO!   </span>Blog</a>
+							<li><a href="https://blog.ethpyramid.com">Blog</a>
                             </li>
                             </li>
                             <li>
