--- a/es/index.html
+++ b/es/index.html
@@ -70,7 +70,7 @@
                             </li>
                             <li><a href="coins.html">Mis Tokens</a>
                             </li>
-							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NUEVO!   </span>Blog</a>
+							<li><a href="https://blog.ethpyramid.com">Blog</a>
                             </li>
                             <li>
                               <a href="whitepaper.html" target="_blank">Papel Blanco</a>
