--- a/fr/index.html
+++ b/fr/index.html
@@ -68,12 +68,12 @@
                         <ul>
                             <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart Contract</a>
                             </li>
-                            <li><a href="coins.html">Mes jetons</a>
+                            <li><a href="coins.html">Mes Jetons</a>
                             </li>
-							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEW!   </span>Blog</a>
+							<li><a href="https://blog.ethpyramid.com">Blog</a>
                             </li>
                             <li>
-                              <a href="whitepaper.html" target="_blank">Livre blanc</a>
+                              <a href="whitepaper.html" target="_blank">Livre Blanc</a>
                             </li>
                         </ul>
                     </div>
