Non-retarded default currency selection for different locales

--- a/au/coins.html
+++ b/au/coins.html
@@ -86,6 +86,9 @@
 							<div id="quoteDisplay"></div>
 							<script>newQuote()</script>
                         </div>
+			<script type="text/javascript">
+				var default_currency = 'AUD';
+			</script>
                         <script type="text/javascript" src="../js/poh.js"></script>
 
                         <div id="token-sale" class="token-bg nochat">
