Change DE background

--- a/de/index.html
+++ b/de/index.html
@@ -35,7 +35,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <div class="main-outer text-center">
         <!-- Homepage Banner -->
-        <div class="introduction-banner-de">
+        <div class="introduction-banner de">
             <div class="header sticky-header">
                 <div class="flagBits">
                     <a href="../de/index.html"><img src="../images/DE.jpg"></a>
