KR Coins and Index pages translated

--- a/kr/index.html
+++ b/kr/index.html
@@ -37,7 +37,7 @@
 <!-- End Google Tag Manager (noscript) -->
 <div class="main-outer text-center">
     <!-- Homepage Banner -->
-    <div class="introduction-banner au">
+    <div class="introduction-banner ">
         <div class="header sticky-header ">
 		<div class="flagBits">
 		<a href="#"><img src="../images/KR.jpg"></a>
