--- a/au/index.html
+++ b/au/index.html
@@ -42,11 +42,11 @@
 		<div class="flagBits">
 		<a href="#"><img src="../images/AU.jpg"></a>
 		<a href="../index.html"><img src="../images/UK.jpg"></a>
-        <a href="../cn/coins.html"><img src="../images/CN.jpg"></a>
-        <a href="../de/coins.html"><img src="../images/DE.jpg"></a>
-        <a href="../es/coins.html"><img src="../images/SP.jpg"></a>
-		<a href="../fr/coins.html"><img src="../images/FR.jpg"></a>
-        <a href="https://img.memecdn.com/soon-my-friend-soon_o_175785.jpg"><img src="../images/KR.jpg"></a>
+        <a href="../cn/index.html"><img src="../images/CN.jpg"></a>
+        <a href="../de/index.html"><img src="../images/DE.jpg"></a>
+        <a href="../es/index.html"><img src="../images/SP.jpg"></a>
+		<a href="../fr/index.html"><img src="../images/FR.jpg"></a>
+        <a href="../kr/index.html"><img src="../images/KR.jpg"></a>
 		</div>
 		<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
