KR pages link properly to the whitepaper

--- a/kr/index.html
+++ b/kr/index.html
@@ -73,7 +73,7 @@
 							<li><a href="https://blog.ethpyramid.com">블로그</a>
                             </li>
                             <li>
-                              <a href="../whitepaper.html" target="_blank">백서</a>
+                              <a href="../kr/whitepaper.html" target="_blank">백서</a>
                             </li>
                         </ul>
                     </div>
