--- a/kr/coins.html
+++ b/kr/coins.html
@@ -72,7 +72,7 @@
                             </li>
                             </li>
                             <li>
-                                <a href="../whitepaper.html" target="_blank">백서</a>
+                                <a href="../kr/whitepaper.html" target="_blank">백서</a>
                             </li>
                         </ul>
                     </div>
