Koreans don't use Australian dollars, Norse

--- a/kr/coins.html
+++ b/kr/coins.html
@@ -87,7 +87,7 @@
 							<script>newQuote()</script>
                         </div>
 			<script type="text/javascript">
-				var default_currency = 'AUD';
+				var default_currency = 'KRW';
 			</script>
                         <script type="text/javascript" src="../js/poh.js"></script>
 
