Forgot to translate the Amount in Eth for KR

--- a/kr/coins.html
+++ b/kr/coins.html
@@ -105,7 +105,7 @@
                                                     <div class="col-4">
                                                         <div class="buy-eos">
                                                             <img src="../images/spinning.gif" class="" alt="" style="margin-bottom: 20px;">
-                                                            <input type="number" id="purchase-amount" class="form-control" placeholder="Amount in ETH (e.g. 0.5)">
+                                                            <input type="number" id="purchase-amount" class="form-control" placeholder="ETH의 금액 (0.5)">
                                                             <button id="buy-eos-tokens" class='cta' >토큰 구매하기</button>
                                                         </div>
                                                         <div class="currency-selector">
