Temporarily nixing the blog whilst we clean it up and move it to WordPress

--- a/cn/coins.html
+++ b/cn/coins.html
@@ -69,8 +69,8 @@
                             <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">智能合约</a>
                             </li>
                             <li><a href="coins.html">我的金币</a>
-							<li><a href="https://blog.ethpyramid.com">博客</a>
-                            </li>
+						<!--	<li><a href="https://blog.ethpyramid.com">博客</a>
+                            </li> -->
                             </li>
                             <li>
                                 <a href="../cn/whitepaper.html" target="_blank">白皮书</a>
