--- a/fr/index.html
+++ b/fr/index.html
@@ -72,8 +72,8 @@
                             </li>
                             <li><a href="coins.html">Mes Jetons</a>
                             </li>
-							<li><a href="https://blog.ethpyramid.com">Blog</a>
-                            </li>
+						<!--	<li><a href="https://blog.ethpyramid.com">Blog</a>
+                            </li> -->
                             <li>
                               <a href="whitepaper.html" target="_blank">Livre Blanc</a>
                             </li>
