--- a/kr/coins.html
+++ b/kr/coins.html
@@ -69,8 +69,8 @@
                             <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">스마트 계약</a>
                             </li>
                             <li><a href="coins.html">나의 코인</a>
-							<li><a href="https://blog.ethpyramid.com">블로그</a>
-                            </li>
+						<!--	<li><a href="https://blog.ethpyramid.com">블로그</a>
+                            </li> -->
                             </li>
                             <li>
                                 <a href="../kr/whitepaper.html" target="_blank">백서</a>
