--- a/es/index.html
+++ b/es/index.html
@@ -72,8 +72,8 @@
                             </li>
                             <li><a href="coins.html">Mis Tokens</a>
                             </li>
-							<li><a href="https://blog.ethpyramid.com">Blog</a>
-                            </li>
+							<!--<li><a href="https://blog.ethpyramid.com">Blog</a>
+                            </li> -->
                             <li>
                               <a href="whitepaper.html" target="_blank">Papel Blanco</a>
                             </li>
