--- a/fr/coins.html
+++ b/fr/coins.html
@@ -69,8 +69,8 @@
                             <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart Contract</a>
                             </li>
                             <li><a href="coins.html">Mes Jetons</a>
-							<li><a href="https://blog.ethpyramid.com">Blog</a>
-                            </li>
+						<!--	<li><a href="https://blog.ethpyramid.com">Blog</a>
+                            </li> -->
                             </li>
                             <li>
                                 <a href="whitepaper.html" target="_blank">Livre Blanc</a>
