--- a/kr/index.html
+++ b/kr/index.html
@@ -72,8 +72,8 @@
                             </li>
                             <li><a href="coins.html">나의 코인</a>
                             </li>
-							<li><a href="https://blog.ethpyramid.com">블로그</a>
-                            </li>
+						<!--	<li><a href="https://blog.ethpyramid.com">블로그</a>
+                            </li> -->
                             <li>
                               <a href="../kr/whitepaper.html" target="_blank">백서</a>
                             </li>
