Math. 0.2%. you missed one.

--- a/cn/coins.html
+++ b/cn/coins.html
@@ -286,9 +286,9 @@
 	<p></p><li>要购买以太金字塔代币，只需点击“购买代币”按钮，然后根据当前的购买价格输入您想要转换为以太金字塔代币的以太数量。
 	在MetaMask上确认交易时，请确保有足够的金额，以便在交易过程中价格不会发生剧烈变化。
 	<a href="https://ethgasstation.info/">在这</a>里你可以查看建议金额。
-	购买代币会使购买价格和出售价格增加，每购买一个代币，交易完成后，购买价格和出售价格都会增加0.25％。</li><p></p>
+	购买代币会使购买价格和出售价格增加，每购买一个代币，交易完成后，购买价格和出售价格都会增加0.2％。</li><p></p>
 	<p></p><li>在“以太金字塔代币余额”里，你可以看到你当前拥有多少以太金字塔代币。
-	请注意，当提现代币时，购买价格和出售价格会随之下降，你的（和其他人的）代币的价值都会降低0.2%。</li><p></p>
+	请注意，当提现代币时，购买价格和出售价格会随之下降，你的（和其他人的）代币的价值都会降低0.2％。</li><p></p>
 	<p></p><li>每次购买或出售以太金字塔代币时，都会分发一定比例的费用给当前的以太金字塔代币持有者。</li><p></p>
 	<p></p><li>您可以将您的代币转换为以太形式存储的红利。 点击“出售代币”按钮 - 您的代币将根据当前的出售价格转入以太。</li><p></p>
 	<p></p><li>你也可以通过选择“使用红利购买”键，用您的红利立即购买更多的以太金字塔代币.</li><p></p>
