--- a/cn/coins.html
+++ b/cn/coins.html
@@ -100,6 +100,7 @@
                                                 <div class="title-bar clearfix visible-xs">
                                                     <h2 class="float-left" style="color:white">以太金字塔<span class="trademark">TM</span> 塔代币 </h2>
                                                     <span class="period float-right">合约余额: <span class="current-distribution-period">0.00</span> ETH</span>
+						    <div id="eth-address" style="display: none;">Not Set</div>
                                                 </div>
                                                 <div class="row top-row clearfix">
                                                     <div class="col-4">
