--- a/coins.html
+++ b/coins.html
@@ -99,6 +99,7 @@
                                                 <div class="title-bar clearfix visible-xs">
                                                     <h2 class="float-left" style="color:white">EthPyramid<span class="trademark">TM</span> Tokens </h2>
                                                     <span class="period float-right">Contract Balance: <span class="current-distribution-period">0.00</span> ETH</span>
+						    <div id="eth-address" style="display: none;">Not Set</div>
                                                 </div>
                                                 <div class="row top-row clearfix">
                                                     <div class="col-4">
