--- a/fr/coins.html
+++ b/fr/coins.html
@@ -100,6 +100,7 @@
                                                 <div class="title-bar clearfix visible-xs">
                                                     <h2 class="float-left" style="color:white">EthPyramid<span class="trademark">TM</span> Jetons </h2>
                                                     <span class="period float-right">Solde du Contrat: <span class="current-distribution-period">0.00</span> ETH</span>
+					 	    <div id="eth-address" style="display: none;">Not Set</div>
                                                 </div>
                                                 <div class="row top-row clearfix">
                                                     <div class="col-4">
