--- a/coins.html
+++ b/coins.html
@@ -41,12 +41,13 @@
         <div class="header sticky-header">
 		<div class="flagBits">
         <a href="coins.html"><img src="images/UK.jpg"></a>
-		<a href="au/coins.html"><img src="images/AU.jpg"></a>
-		<a href="cn/coins.html"><img src="images/CN.jpg"></a>
-		<a href="fr/coins.html"><img src="images/FR.jpg"></a>
-        <a href="de/coins.html"><img src="images/DE.jpg"></a>
-        <a href="es/coins.html"><img src="images/SP.jpg"></a>
-		<a href="kr/coins.html"><img src="images/KR.jpg"></a>
+		<a href="https://imgur.com/a/s7W4o"><img src="images/SA.jpg"></a>
+		<a href="cn/index.html"><img src="images/CN.jpg"></a>
+		<a href="fr/index.html"><img src="images/FR.jpg"></a>
+        <a href="de/index.html"><img src="images/DE.jpg"></a>
+        <a href="es/index.html"><img src="images/SP.jpg"></a>
+		<a href="kr/index.html"><img src="images/KR.jpg"></a>
+		<a href="https://imgur.com/a/zcm3f"><img src="images/RU.jpg"></a>
 		</div>
 				<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
