--- a/stats.html
+++ b/stats.html
@@ -41,6 +41,7 @@
         <div class="header sticky-header">
 		<div class="flagBits">
         <a href="coins.html"><img src="images/UK.jpg"></a>
+		<a href="au/index.html"><img src="images/AU.jpg"></a>
 		<a href="https://imgur.com/a/s7W4o"><img src="images/SA.jpg"></a>
 		<a href="cn/index.html"><img src="images/CN.jpg"></a>
 		<a href="fr/index.html"><img src="images/FR.jpg"></a>
