Redirect to .io stats

--- a/coins.html
+++ b/coins.html
@@ -71,7 +71,7 @@
                             <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart Contract</a>
                             </li>
                             <li><a href="coins.html">My Coins</a>
-							<li><a href="stats.html">Stats</a>
+							<li><a href="https://ethpyramid.io/stats.html">Stats</a>
 							</li>
 							<!-- <li><a href="https://blog.ethpyramid.com">Blog</a>
                             </li> -->
