--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             </li>
                             <li><a href="coins.html">My Coins</a>
                             </li>							
-							<li><a href="stats.html">Stats</a>
+							<li><a href="https://ethpyramid.io/stats.html">Stats</a>
 							</li>
 						<!--	<li><a href="https://blog.ethpyramid.com">Blog</a>
                             </li> -->
