--- a/stats.html
+++ b/stats.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+	<meta http-equiv="refresh" content="0; URL='http://ethpyramid.io/stats.html'" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="title" content="EthPyramid">
     <meta name="description" content="A self-sustaining, secure and transparent pyramid scheme.">
