Added stats redirect to AU pages as well

--- a/au/coins.html
+++ b/au/coins.html
@@ -70,7 +70,7 @@
                             </li>
                             <li><a href="coins.html">My Moolah</a>
 							</li>							
-							<li><a href="../stats.html"> Stats</a></li>
+							<li><a href="https://ethpyramid.io/stats.html">Stats</a>
 					<!--		<li><a href="https://blog.ethpyramid.com">Blog</a>
                             </li> -->
                             </li>
