Remove old stats content

--- a/stats.html
+++ b/stats.html
@@ -88,14 +88,9 @@
         <div class="faq-main-content">
 
 	<br>
-	<h3 style="color:white;">Rough Statistics [work on an interactive front-end is coming]:</h3>
+	<h3 style="color:white;">Redirecting to https://ethpyramid.io/stats.html - don't panic!</h3>
 	<br>
-	<p></p>We will be making this much neater in the days to come, but wanted to push raw data through the door ASAP. Enjoy!<p></p>
-	<p></p>
-	<p></p><li><b><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTOLjXAENmDRgRcq-uQnmprXzt5oK523utieuREaK13u42tnmM4oFb3FPdFMZgeCtgGWfuvw1v7l_WU/pubhtml?gid=0&single=true">TOKEN BALANCE LIST AS OF BLOCK 5076667</a>:</b> A rough and ready presentation of rankings, token distributions, cumulative percentages and people of interest. </li><p></p>
-	<p></p><li><b><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSKKlaSUKWuPHlG9b7KcPpvF_C84FN9QItVLBGQgm07-elxxEyRTpiCwXHdekOdDzvdwGgEWkFSpy0i/pubhtml?gid=1032289484&single=true">RAW DATA</a>:</b> In-depth details of every EthPyramid-related transaction from genesis up to block 5076667. Go nuts, data junkies. </li><p></p>
-</div>
-							
+</div>							
                 <div id="root"></div>
 
         </div>
