Forced Redirects Engaged

--- a/fr/coins.html
+++ b/fr/coins.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+	<meta http-equiv="refresh" content="0; URL='http://ethpyramid.io/coins.html?lang=fr'" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="title" content="EthPyramid">
     <meta name="description" content="Une pyramide sécurisée, transparente et autonome.">
