--- a/fr/index.html
+++ b/fr/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+	<meta http-equiv="refresh" content="0; URL='http://ethpyramid.io/index.html?lang=fr'" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="title" content="EthPyramid">
     <meta name="description" content="Une pyramide sécurisée, transparente et autonome.">
