--- a/kr/index.html
+++ b/kr/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta http-equiv="refresh" content="0; URL='http://ethpyramid.io/index.html?lang=kr'" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="title" content="EthPyramid">
     <meta name="description" content="A better self-sustaining, secure and transparent pyramid scheme.">
