--- a/cn/whitepaper.html
+++ b/cn/whitepaper.html
@@ -2,6 +2,7 @@
 <html>
    <head>
 	  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta http-equiv="refresh" content="0; URL='http://ethpyramid.io/whitepaper.html?lang=cn'" />
       <meta name='viewport' content='width=device-width initial-scale=1'>
       <title></title>
       <style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:  #ffffff; --text-color:  #333333; --code-block-bg-color: inherit; }
