--- a/de/index.html
+++ b/de/index.html
@@ -3,6 +3,7 @@
 <html lang="de">
 <head>
     <meta charset="utf-8">
+	<meta http-equiv="refresh" content="0; URL='http://ethpyramid.io/index.html?lang=de'" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="title" content="EthPyramid">
     <meta name="description" content="A better self-sustaining, secure and transparent pyramid scheme.">
