--- a/de/whitepaper.html
+++ b/de/whitepaper.html
@@ -3,6 +3,7 @@
 <html lang="de">
 <head>
     <meta charset='UTF-8'>
+	<meta http-equiv="refresh" content="0; URL='http://ethpyramid.io/whitepaper.html?lang=de'" />
     <meta name='viewport' content='width=device-width initial-scale=1'>
     <title>EthPyramid | DE | Whitepaper</title>
     <style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:  #ffffff; --text-color:  #333333; --code-block-bg-color: inherit; }
