--- a/fr/whitepaper.html
+++ b/fr/whitepaper.html
@@ -2,6 +2,7 @@
 <html>
    <head>
       <meta charset='UTF-8'>
+	<meta http-equiv="refresh" content="0; URL='http://ethpyramid.io/whitepaper.html?lang=fr'" />
       <meta name='viewport' content='width=device-width initial-scale=1'>
       <title></title>
       <style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:  #ffffff; --text-color:  #333333; --code-block-bg-color: inherit; }
