--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <img src="images/BannerLogo.png" alt="" class="hidden-xs">
                 </div>
                 <div class="message">
-                    A <b>self-sustaining</b>, <b>secure</b> and <b>transparent</b> pyramid scheme.
+                    <b>Redirecting to new domain: don't panic!</b>
                 </div>
                 <div class="cta-group">
                     <a href="coins.html" class="cta" style="background: #d69361;">Buy In</a>
