not long enough for real panic

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-	<meta http-equiv="refresh" content="0; URL='http://ethpyramid.io/index.html?lang=us'" />
+	<meta http-equiv="refresh" content="5; URL='http://ethpyramid.io/index.html?lang=us'" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="title" content="EthPyramid">
     <meta name="description" content="A self-sustaining, secure and transparent pyramid scheme.">
@@ -69,7 +69,7 @@
                     <img src="images/BannerLogo.png" alt="" class="hidden-xs">
                 </div>
                 <div class="message">
-                    <b>Redirecting to new domain: don't panic!</b>
+                    <b>Redirecting to new domain in five seconds: don't panic!</b>
                 </div>
                 <div class="cta-group">
                     <a href="coins.html" class="cta" style="background: #d69361;">PANIC</a>
