remove button links

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                     <b>Redirecting to new domain in five seconds: don't panic!</b>
                 </div>
                 <div class="cta-group">
-                    <a href="coins.html" class="cta" style="background: #d69361;">PANIC</a>
-                    <a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" class="cta" target="_blank">OH GOD</a>
+                    <a href="" class="cta" style="background: #d69361;">PANIC</a>
+                    <a href="" class="cta" target="_blank">OH GOD</a>
                 </div>
             </div>
         </div>
